# autopoietic-os

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  vm.yml
crates/autopoietic-core/: Cargo.toml
crates/mutation-journal/: Cargo.toml
crates/mutation-journal/src/: main.rs
crates/mutation-runner/: Cargo.toml
crates/os-introspect/: Cargo.toml
docs/: anti-goals.md  ci.md  manifesto.md  mutation-protocol.md  ontology.md  phases.md
docs/adr/: 0001-nixos-configuration-as-genome.md  0002-mutations-are-patches-not-commands.md  0003-effect-ledger-for-non-nix-side-effects.md  0004-rust-workspace-for-system-tools.md  0005-observe-only-before-autonomous-mutation.md  0006-verifier-guided-mutation-pipeline.md  0007-distributable-iso-as-complete-os.md  0008-minimal-nixos-based-distribution.md  0009-external-grounding-for-version-sensitive-facts.md  0010-semantic-review-before-meaningful-changes.md  0011-rust-implementation-discipline.md  0012-p0-iso-verification-boundary.md  0013-p1-offline-mutation-verifier-boundary.md  0014-p3-install-workflow-and-generation-lineage-boundary.md  0015-p2-vm-tested-mutation-promotion-boundary.md  README.md  (+2 more)
home/: user.nix
hosts/aion/: configuration.nix  (+1 more)
memory/: effect.schema.json  evidence-bundle.schema.json  generation.schema.json  install-seed-manifest.schema.json  mutation-promotion.schema.json  mutation-proposal.schema.json  mutation-result.schema.json  mutation.schema.json  organ-registry-suggestion.schema.json  organ-review.schema.json  organ.schema.json  self-state.schema.json
(+24 files in other folders)
