[package]
name = "mutation-journal"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
autopoietic-core = { path = "../autopoietic-core" }
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
